# wingspan

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: bird_data.csv  bird_data_raw.xlsx  bird_list.py  generate_bird_data_csv.ipynb  generate_bird_list.py
docs/: model_changelog.md
src/: constants.py  game.py  train.py
src/entities/: bird.py  birdfeeder.py  deck.py  food_supply.py  game_state.py  gameboard.py  hand.py  player.py  tray.py
src/rl/: evaluator.py  featurizer.py  interpreter.py  linear_policy.py  mcts.py  policy.py  reinforcement_learning.py  report.py  self_play.py  trainer.py
src/utilities/: player_factory.py  utils.py
tests/: test_game.py  test_player.py
tests/entities/: test_bird.py  test_birdfeeder.py  test_deck.py  test_food_supply.py  test_game_state.py  test_gameboard.py  test_hand.py  test_player.py  test_tray.py
tests/rl/: test_evaluator.py  test_featurizer.py  test_interpreter.py  test_linear_policy.py  test_mcts.py  test_policy.py  test_reinforcement_learning.py  test_report.py  test_self_play.py  test_trainer.py
tests/utilities/: test_player_factory.py  test_utils.py
