[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wingspan"
version = "0.1.0"
description = "Reinforcement learning agents for the board game Wingspan"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "data"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
